--- a/package.json
+++ b/package.json
@@ -19,22 +19,33 @@
   "dependencies": {
     "@prisma/client": "3.8.1",
     "@types/graphql-fields": "^1.3.4",
+    "bcrypt": "^5.0.1",
     "class-validator": "^0.13.2",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "express": "4.17.2",
     "express-graphql": "0.12.0",
+    "express-jwt": "^6.1.0",
     "got": "^12.0.1",
     "graphql": "15.8.0",
     "graphql-fields": "^2.0.3",
     "graphql-scalars": "1.14.1",
     "graphql-type-json": "^0.3.2",
     "jayson": "^3.6.6",
+    "jsonwebtoken": "^8.5.1",
+    "node-telegram-bot-api": "^0.56.0",
     "reflect-metadata": "^0.1.13",
     "tslib": "^2.3.1",
     "type-graphql": "^1.1.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.12",
     "@types/express": "4.17.13",
+    "@types/express-jwt": "^6.0.4",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "16.11.21",
+    "@types/node-telegram-bot-api": "^0.53.6",
     "prisma": "3.8.1",
     "ts-node": "10.4.0",
     "ts-node-dev": "1.1.8",
