--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "express": "4.17.2",
     "express-graphql": "0.12.0",
     "express-jwt": "^6.1.0",
+    "google-auth-library": "^7.12.0",
     "got": "^12.0.1",
     "graphql": "15.8.0",
     "graphql-fields": "^2.0.3",
@@ -46,6 +48,7 @@
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "16.11.21",
     "@types/node-telegram-bot-api": "^0.53.6",
+    "@types/passport-google-oauth20": "^2.0.11",
     "prisma": "3.8.1",
     "ts-node": "10.4.0",
     "ts-node-dev": "1.1.8",
