--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "google-auth-library": "^7.12.0",
     "graphql": "15.8.0",
     "graphql-fields": "^2.0.3",
+    "graphql-middleware": "^6.1.13",
     "graphql-scalars": "1.14.1",
+    "graphql-shield": "^7.5.0",
     "graphql-type-json": "^0.3.2",
     "jayson": "^3.6.6",
     "jsonwebtoken": "^8.5.1",
